<resources>
    <string name="app_name">OfficeManager</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="pass_id">Пропуск №%d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Номер телефона</string>
    <string name="fullName">ФИО</string>
    <string name="dateStart">Действует с</string>
    <string name="dateEnd">Действует до</string>
    <string name="comment">Опишите детали заказа</string>
    <string name="address">Адрес</string>
    <string name="room">Кабинет</string>
    <string name="floor">этаж</string>
    <string name="text_review_example">Обратился за помощью к мастеру, все было велеиколепно, мастер справился прекрасно</string>
    <string name="orderType">Тип заказа</string>
    <string name="day">День</string>
    <string name="time">Время</string>
    <string name="company">Компания</string>
    <string name="price">Цена</string>
    <string name="status">Статус</string>
</resources>